--- a/assets/style/container.css
+++ b/assets/style/container.css
@@ -3,17 +3,33 @@
 	margin: 0 auto;
 }
 
+.container.-flex {
+	display: flex;
+	padding-top: 220px;
+	padding-bottom: 100px;
+}
+
 @media screen and ( max-width: 1120px ) {
 
 	.container { 
 		max-width: 890px;
-	 }
+	}
+
+	.container.-flex {
+		padding-top: 150px;
+		padding-bottom: 150px;f
+	}
 }
 
 @media screen and ( max-width: 902px ) {
 
 	.container {
 		max-width: 600px;
+	}
+
+	.container.-flex {
+		display: block;
+		text-align: center;
 	}
 }
 
