--- a/assets/style/container.css
+++ b/assets/style/container.css
@@ -17,7 +17,7 @@
 
 	.container.-flex {
 		padding-top: 150px;
-		padding-bottom: 150px;f
+		padding-bottom: 150px;
 	}
 }
 
@@ -45,10 +45,21 @@
 	.container {
 		max-width: 450px;
 	}
+
+	.container.-none {
+		max-width: none;
+		margin-right: 20px;
+		margin-left: 20px;
+	}
 }
 
 @media screen and ( max-width: 464px ) {
 
 	.container {
 		max-width: 300px;
+	}
+	.container.-flex {
+		padding-top: 30px;
+    	padding-bottom: 40px;
+	}
 }
