--- a/assets/style/title.css
+++ b/assets/style/title.css
@@ -33,6 +33,13 @@
 	font-size: 25px;
 }
 
+.subtitle.-margin.-orenge {
+	color: var(--color-orenge);
+	font-size: 33px;
+	margin-bottom: 30px;
+}
+
+
 .text {
 	font-size: 17px;
 	color: var(--color-white);
@@ -77,6 +84,16 @@
 		margin-left: 70px;
 	}
 
+	.subtitle.-margin.-orenge {
+		font-size: 24px;
+	}
+
+	.text.-smoll.-width {
+		margin-left: 0px;
+		margin-right: 0px;
+		width: 300px;
+	}
+
 	.line {
 		width: 100%;
 	}
@@ -111,6 +128,10 @@
 		margin-right: 90px;
 		margin-left: 90px;
 	}
+
+	.text.-smoll.-width {
+		width: 250px;
+	}
 }
 
 @media screen and (max-width: 464px) {
@@ -127,6 +148,14 @@
 
 	.subtitle.-margin {
 		text-align: left;
+	}
+
+	.subtitle.-margin.-orenge {
+		font-size: 16px;
+	}
+
+	.text.-smoll.-width {
+		width: 177px;
 	}
 	
 	.title {
