--- a/assets/style/title.css
+++ b/assets/style/title.css
@@ -5,6 +5,15 @@
 	letter-spacing: 0.1em;
 }
 
+.title.-center {
+	text-align: center;
+	margin-bottom: 50px; 
+}
+
+.title.-margin {
+	margin-bottom: 40px;
+}
+
 .line {
 	height: 3px;
 	width: 500px;
@@ -27,6 +36,11 @@
 	letter-spacing: 0.1em; 
 }
 
+.subtitle.-center {
+	text-align: center;
+	margin-bottom: 0px;
+}
+
 .subtitle.-margin {
 	margin-top: 20px;
 	margin-bottom: 0px;
@@ -39,6 +53,10 @@
 	margin-bottom: 30px;
 }
 
+.subtitle.-margin.-orenge.-none {
+	margin: 0px;
+	margin-bottom: 15px;
+}
 
 .text {
 	font-size: 17px;
@@ -48,6 +66,20 @@
 .text.-smoll {
 	width: 350px;
 	margin-bottom: 20px;
+}
+
+.text.-all {
+	width: 400px;
+	margin-bottom: 20px;
+}
+
+.text.-width {
+	width: 250px;
+	text-align: left ;
+}
+
+.text.-margin {
+	margin-bottom: 50px;
 }
 
 .info {
@@ -156,6 +188,10 @@
 
 	.text.-smoll.-width {
 		width: 177px;
+	}
+
+	.text.-all {
+		width: 250px;
 	}
 	
 	.title {
