--- a/assets/style/section.css
+++ b/assets/style/section.css
@@ -22,15 +22,25 @@
 
 .section.-table {
 	background-image: url("../img/table.png");
+	padding-top: 130px;
+	background-position-x: -10%; 
+}
+
+.section.-quotes {
+	background-image: url("../img/quotes.png");
 }
 
 @media screen and (max-width: 767px ){
-	    .section.-header {
-	    	height: 700px;
-	    }
+	.section.-header {
+    	height: 700px;
+	}
 }
 
 @media screen and (max-width: 1120px ) {
+	.section.-table {
+		background-position-x: 10%; 
+	}
+
 	.section.-about {
 		height: 100%;
 	}
@@ -40,9 +50,19 @@
 	}
 }
 
+@media screen and (max-width: 902px ){
+	.section.-table {
+		background-position-x: 30%; 
+	}
+}
+
 @media screen and (max-width: 767px ) {
 	.section.-features {
 		background-position-x: 40%; 
+	}
+
+	.section.-table {
+		background-position-x: 45%; 
 	}
 }
 
@@ -50,5 +70,15 @@
 	.section.-features {
 		background-image: url(../img/features-smoll.png);
 		height: 650px;
+	}
+
+	.section.-table {
+		background-position-x: 45%; 
+	}
+}
+
+@media screen and (max-width: 464px ){
+	.section.-table {
+		background-image: url("../img/table2.png"); 
 	}
 }
