--- a/assets/style/card.css
+++ b/assets/style/card.css
@@ -4,6 +4,7 @@
 	background-color: #333333;
 	border-radius: 10px;
 	margin-bottom: 20px; 
+	padding: 20px;
 }
 
 .card.-t {
@@ -23,5 +24,52 @@
 }
 
 .width {
-	width: 50%;
+	width: 45%;
+}
+
+@media screen and (max-width: 1120px ){
+	.card {
+		width: 375px;
+		height: 175px;
+	}
+}
+
+@media screen and (max-width: 1024px ){
+	.card {
+		width: 360px;
+		height: 170px;
+	}
+}
+
+@media screen and (max-width: 902px ){
+	.width {
+		width:100%;
+	}
+
+	.card {
+		width: 100%;
+		height: 220px;
+	}
+
+	.card.-t {
+		margin-right: 0px;
+		margin-left: 0px;
+		margin-top: 20px;
+		}
+
+	.card.-c {
+		margin-right: 0px;
+		margin-left: 0px;
+	}
+
+	.card.-b {
+		margin-right: 0px;
+		margin-left: 0px;
+	}
+}
+
+@media screen and (max-width: 464px){
+	.card {
+		height: 180px;
+	}
 }
