--- a/assets/style/img.css
+++ b/assets/style/img.css
@@ -6,6 +6,14 @@
 	width: 45%;
 }
 
+.avatar {
+	background-image: url("../img/small/people1.jpg");
+	width: 65px;
+	height: 65px;
+	border-radius: 50%;
+	margin-right: 20px;
+}
+
 .center {
 	justify-content: center;
 }
