--- a/assets/style/card.css
+++ b/assets/style/card.css
@@ -1,6 +1,6 @@
 .card {
 	width: 450px;
-	height: 200px;
+	height: min-content;
 	background-color: #333333;
 	border-radius: 10px;
 	margin-bottom: 20px; 
@@ -30,14 +30,14 @@
 @media screen and (max-width: 1120px ){
 	.card {
 		width: 375px;
-		height: 175px;
+		height: min-content;
 	}
 }
 
 @media screen and (max-width: 1024px ){
 	.card {
 		width: 360px;
-		height: 170px;
+		height: min-content;
 	}
 }
 
@@ -48,7 +48,7 @@
 
 	.card {
 		width: 100%;
-		height: 220px;
+		height: min-content;
 	}
 
 	.card.-t {
@@ -70,6 +70,6 @@
 
 @media screen and (max-width: 464px){
 	.card {
-		height: 180px;
+		height: min-content;
 	}
 }
