--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -31,6 +31,10 @@ body, h1, h2, h3, h4, h5, h6, li, ol, u, p {
 	border: 2px solid #565656;
 }
 
+.position.-width {
+	width: 62%;
+}
+
 .flex {
     height: 680px;
     display: flex;
@@ -50,8 +54,14 @@ body, h1, h2, h3, h4, h5, h6, li, ol, u, p {
 }
 
 .flex.-small.-jk {
-	justify-content: space-between;
 	align-items: center;
+	margin-top: 60px;
+}
+
+.flex.-height {
+	height: min-content;
+	justify-content: flex-start;
+	margin-top: 45px;
 }
 
 .content {
@@ -59,9 +69,30 @@ body, h1, h2, h3, h4, h5, h6, li, ol, u, p {
 	justify-content: flex-end;
 }
 
+.content.-height {
+	align-items: center;
+    height: 100%;
+
+}
+
 @media screen and (max-width: 1120px) {
 	.flex {
 		height: 550px;
+	}
+
+	.flex.-height {
+		display:block;
+	}
+}
+
+
+@media screen and (max-width: 1024px ){
+	.flex.-small.-jk {
+		display: block;
+	}
+
+	.position.-width {
+		width: 55%
 	}
 }
 
@@ -78,8 +109,18 @@ body, h1, h2, h3, h4, h5, h6, li, ol, u, p {
 	}
 }
 
+@media screen and (max-width: 600px ){
+	.position.-width {
+		width: 70%;
+	}
+}
+
 @media screen and (max-width: 464px ){
 	.block {
 		width: 150px;
+	}
+
+	.position.-width {
+		width: 81%;
 	}
 }
