--- a/assets/style/button.css
+++ b/assets/style/button.css
@@ -8,3 +8,26 @@
 	border-radius: 4px;
 	border: 0px; 
 }
+
+.button.-gray {
+	background: rgba(255, 255, 255, 0.08);
+	margin-right: 20px;
+	padding-right: 20px; 
+	padding-top:5px;
+}
+
+@media screen and (max-width: 1120px ){
+	.button.-gray {
+		margin-bottom: 15px; 
+	}
+}
+
+@media screen and (max-width: 464px ){
+	.button.-big {
+		max-width: 235px;
+	}
+
+	.button.-gray {
+		margin-right: 0px;
+	}
+}
