--- a/assets/style/container.css
+++ b/assets/style/container.css
@@ -9,6 +9,15 @@
 	padding-bottom: 100px;
 }
 
+.container.-flex.-margin {
+	padding-bottom: 0px;
+}
+
+.container.-none {
+	padding-top: 0px;
+	height: 100%;
+}
+
 @media screen and ( max-width: 1120px ) {
 
 	.container { 
@@ -35,6 +44,11 @@
 	.container.-flex.-small {
 		max-width: 60%;
 	}
+
+	.container.-flex.-margin.-none{
+		display: flex;	
+		align-items: flex-end;
+	}
 }
 
 @media screen and ( max-width: 790px ) {
@@ -45,9 +59,14 @@
 }
 
 @media screen and (max-width: 767px ){
-	.container{
+	.container { 
 		max-width: 550px;
 	} 
+
+	.container.-flex.-margin.-none {
+		max-width: 100%;
+		margin-right: 100px;
+	}
 }
 @media screen and (max-width: 574px ){
 	
