--- a/assets/style/button.css
+++ b/assets/style/button.css
@@ -14,11 +14,15 @@
 	margin-right: 20px;
 	padding-right: 20px; 
 	padding-top:5px;
+	width: 55%;
 }
 
 @media screen and (max-width: 1120px ){
 	.button.-gray {
 		margin-bottom: 15px; 
+	}
+	.button.-gray {
+		width: 290px;
 	}
 }
 
