--- a/assets/style/nav.css
+++ b/assets/style/nav.css
@@ -13,6 +13,14 @@
 	align-items: center;
 }
 
+.nav.-block {
+	display: none;
+}
+
+.nav.-block.-none {
+	display: none;
+}
+
 .nav_line {
 	background-color: var(--color-white);
 	width: 2px;
@@ -50,11 +58,41 @@
 	.header__nav.-margin:last-child {
 		margin-right: 0px;
 	}
+
 	.header__nav.-margin {
 		margin-right: 20px;
 		font-size: 14px;
 	}
 
+}
+
+@media screen and (max-width: 630px) {
+	.header__nav.-margin.-none.-block {
+		display: none;
+	}
+
+	.header__nav.-margin {
+		margin-right: 30px;
+		margin-bottom: 20px;
+	}
+
+	.header__nav.-margin.-none.-right {
+		margin-right: 0px;
+	}
+
+	.nav.-block.-none {
+		display: flex;
+		justify-content: center;
+	}
+
+	.nav.-block {
+		display: flex;
+		justify-content: space-around;	
+	}
+	
+	.nav.-flex {
+		justify-content: center;
+	}
 }
 
 @media screen and (max-width: 574px){
