--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -1,11 +1,15 @@
-.footer {
-	display: flex;
-	justify-content: space-between;
+footer {
 	background-color:  #080A0B;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 30px;
 	padding-right: 30px;
+}
+
+.footer {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 15px;
 }
 
 @media screen and (max-width: 1024px ){
