--- a/assets/style/img.css
+++ b/assets/style/img.css
@@ -47,8 +47,10 @@
 }
 
 .logo.-block {		
-	display: none;
-	margin-bottom: 40px;
+	display: flex;
+	height: 90px;
+	width: 90px;
+	margin-bottom: 20px;
 }
 
 @media screen and (max-width: 1120px ){
