--- a/assets/style/burger.css
+++ b/assets/style/burger.css
@@ -8,7 +8,7 @@
     	border-radius: 4px;
     	flex-direction: column;
     	justify-content: space-between;
-    	width: 36px;
+    	width: 100%;
     	height: 30px;
 	}
 	.burger__item {
