--- a/assets/style/img.css
+++ b/assets/style/img.css
@@ -32,6 +32,11 @@
 	margin-right: 20px;
 }
 
+
+.twiter {
+	margin-bottom: 50px;S
+}
+
 .avatar.-n2 {
 	background-image: url("../img/small/people2.jpg");
 	background-position-x: 40%;
